--- a/src/style/index.css
+++ b/src/style/index.css
@@ -90,6 +90,7 @@ input[type=text] {
   font-size: 1.7rem;
   background-color: rgb(255 255 255/ 3%);
   color: var(--white);
+  text-align: center;
   box-shadow: inset 0 3px 10px -10px rgba(255, 255, 255, 0.3), 0 -5px 10px -10px rgba(0, 0, 0, 0.3);
   border: 1px solid rgb(255 255 255/ 5%);
   transition: all 0.15s ease-in-out;
@@ -198,8 +199,6 @@ img {
   padding: 0.8rem 0;
   border-radius: 2.5rem;
 }
-
-
 
 h2 {
   color: var(--white);
